tests/fixtures/invalid/aggregate_bit_fields.c
struct Flags {
    unsigned ready : 1;
};

int main(void) {
    return 0;
}
